--- a/YusupovHotel/Pages/AllRoomsPage.razor
+++ b/YusupovHotel/Pages/AllRoomsPage.razor
@@ -1,10 +1,10 @@
 ﻿@page "/rooms"
 
 <PageTitle>Room</PageTitle>
-@inject IConfiguration config
 @inject NavigationManager manager
 @inject SingletonServise servise
 @inject IWebHostEnvironment Environment
+@inject IConfiguration config
 @inject IJSRuntime js
 
 <section>
@@ -119,7 +119,7 @@
                 </a>
                 <span style="font-size: 28px; top: 69%;">@room.Type</span>
                 <span style="font-size: 18px; top: 78%;">Цена: @room.Cost р</span>
-                <button class="btn">Забронировать</button>
+                <button class="btn" @onClick >Забронировать</button>
             </div>
             }
         }
@@ -179,14 +179,13 @@
                 {
                     await file.Data.CopyToAsync(stream);
                     fileBytes.Add(stream.ToArray());
-                    var images = FileSystemService.GetImages(Convert.ToBase64String(fileBytes[i]));
+                    var images = FileSystemService.GetImage(Convert.ToBase64String(fileBytes[i]));
                     imgSrc.Add(string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(images)));
                 }
             }
         }
         else if (files.Count() > 3) inputFileError = "Можно загрузить только 3 фото";
         else inputFileError = "Нужно загрузить 3 фото";
-
     }
 
     private void Clear()
@@ -422,25 +421,4 @@
         font-size: 2.1rem;
         top: 5px;
     }
-
-    .sr-only {
-   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
-.input-label {
-  padding : 20px;
-  background-color : #f55442;
-  color: white;
-  border-radius: 10px;
-  cursor : pointer;   
-}
-
 </style>
