--- a/YusupovHotel/Pages/RoomPage.razor
+++ b/YusupovHotel/Pages/RoomPage.razor
@@ -6,43 +6,139 @@
 @inject SingletonServise servise
 
 <section style="color:#363635;" >
-<div>
-    <div>
-        <div style="text-align: center; font-family: Georgia; font-size: 2em;">
-            <span>Бизнес номер @currentRoom.Type</span>
+        <div class="modal fade" id="modalRegisterForm" data-bs-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Добавление нового номера</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" @onclick=Clear>
+                </button>
+            </div>
+             <EditForm Model="@roomModel" class="formRegistr" OnValidSubmit="@Submit">
+        <DataAnnotationsValidator />
+        <div class="modal-body mx-3">
+                <div class="md-form mb-5">
+                        <iconify-icon icon="tabler:number"></iconify-icon>
+                    <div id="inputBox">
+                        <InputNumber TValue="int?" class="fas fa-envelope prefix grey-text" required="required" @bind-Value="roomModel.Number" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                        <span id="span">Номер комнаты</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Number" /></span>
+                    </div>
+                </div>
+                <div class="md-form mb-5">
+                        <iconify-icon icon="icon-park-twotone:hotel-please-clean"></iconify-icon>
+                        <div class="typeList" >
+                        <InputSelect @bind-Value="@roomModel.Type" required="required"
+                            class="dropdown" style="outline:none; outline-style:none">
+                            <option selected disabled></option>
+                            <option value="Стандарт">Стандарт</option>
+                            <option value="Бизнес">Бизнес</option>
+                            <option value="Люкс одноместный">Люкс одноместный</option>
+                            <option value="Люкс однокомнатный">Люкс двухкомнатный</option>
+                            <option value="Люкс премиум">Люкс премиум</option>
+                        </InputSelect>
+                        <span id="span">Тип номера</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Type" /></span>
+                    </div>
+                </div>
+                <div class="md-form mb-5">
+                    <iconify-icon icon="pepicons-pop:persons"></iconify-icon>
+                    <div id="inputBox">
+                        <InputNumber TValue="int?" class="fas fa-envelope prefix grey-text" required="required" @bind-Value="roomModel.Capacity" onkeyup="this.value = this.value.replace(/[^0-9]/ig, '')" />
+                        <span id="span">Вместимость</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Capacity" /></span>
+                    </div>
+                </div>
+                <div class="md-form mb-5">
+                        <iconify-icon icon="bx:area"></iconify-icon>
+                    <div id="inputBox">
+                        <InputNumber TValue="double?" class="fas fa-envelope prefix grey-text" required="required" prefix="" @bind-Value="roomModel.Area"  />
+                        <span id="span">Площадь</span>
+                        <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Area" /></span>
+                    </div>
+                </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="ic:twotone-price-check"></iconify-icon>
+                        <div id="inputBox">
+                            <InputNumber TValue="double?" class="fas fa-envelope prefix grey-text" required="required" prefix="" @bind-Value="roomModel.Cost" />
+                            <span id="span">Цена за ночь</span>
+                            <span style="margin-top: -4px"><ValidationMessage For="() => roomModel.Cost" /></span>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="mdi:text-box"></iconify-icon>
+                        <div id="inputBox">
+                            <div class="description">
+                                <InputTextArea class="fas fa-envelope prefix grey-text" style="font-size: 14px;" type="text" @bind-Value="roomModel.Description" required="required" rows="4" />
+                                <span id="span" style="margin-top: -105px; background-color: white">Описание</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="md-form mb-5">
+                        <iconify-icon icon="material-symbols:image-search-rounded" style="top:-14px"></iconify-icon>
+                        <BlazorInputFile.InputFile OnChange="@LoadFiles" id="inputimage" class="form-control" multiple accept=".png,.jpg,.jpeg" />
+                            @if (inputFileError != "")
+                            {
+                                <span style="margin-top: -4px; margin-left: 50px; color: red; font-size: 0.8em; text-transform: uppercase;">@inputFileError</span>
+                            }
+                            else if(imgSrc.Count == 3)
+                            {
+                                <div style="display:flex; align-content:center; padding: 10px;" >
+                                    <img src="@imgSrc[0]" class="fit-picture" height="140" width="145" style="padding:10px"/>
+                                    <img src="@imgSrc[1]" class="fit-picture" height="140" width="145" style="padding:10px" />
+                                    <img src="@imgSrc[2]" class="fit-picture" height="140" width="145" style="padding:10px" />
+                                </div>
+                            }
+                        
+                    </div>
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                        <button class="btn btn-default btn-success" type="submit">Изменить</button>
+            </div>
+                </EditForm>
         </div>
+    </div>
+</div>
+
+<div>
+    <div style="text-align: center; font-family: Georgia; font-size: 2em;">
+        <span>@roomModel.Type</span>
+        <button id="buttonAdd"  class="button" data-bs-toggle="modal" data-bs-target="#modalRegisterForm">
+                <iconify-icon icon="material-symbols:edit"></iconify-icon>
+        </button>
     </div>
 <div class="grid-gallery">
     <div class="grid-item">
-                <a href="@currentRoom.photosUrl[0]" data-lightbox="gridImage">
-                    <img src="@currentRoom.photosUrl[0]" />
+                <a href="@roomModel.photosUrl[0]" data-lightbox="gridImage">
+                    <img src="@roomModel.photosUrl[0]" />
         </a>
     </div>
     <div class="grid-item">
-                <a href="@currentRoom.photosUrl[1]" data-lightbox="gridImage">
-                    <img src="@currentRoom.photosUrl[1]" />
+                <a href="@roomModel.photosUrl[1]" data-lightbox="gridImage">
+                    <img src="@roomModel.photosUrl[1]" />
         </a>
     </div>
     <div class="grid-item">
-                <a href="@currentRoom.photosUrl[2]" data-lightbox="gridImage">
-                    <img src="@currentRoom.photosUrl[2]" />
+                <a href="@roomModel.photosUrl[2]" data-lightbox="gridImage">
+                    <img src="@roomModel.photosUrl[2]" />
         </a>
     </div>
 </div>
-<div style="margin-left: 38%; padding-bottom:40px">
+<div style="margin-left: 38%; padding-bottom:40px" class="mainInfo">
     <div style="font-size: 20px">
             <div >
                 <iconify-icon icon="bx:area"></iconify-icon>
-                    @currentRoom.Area м <sup>2</sup>
+                    @roomModel.Area м <sup>2</sup>
             </div>
             <div style="margin-top: -30px; margin-left: 176px">
                 <iconify-icon icon="pepicons-pop:persons" ></iconify-icon>
-                    @currentRoom.Capacity 
-            </div>
+                    @roomModel.Capacity
+                </div>
         <div style="margin-top: -30px; margin-left: 300px">
                 <iconify-icon icon="ic:twotone-price-check"></iconify-icon>
-                    @currentRoom.Cost р 
-            </div>
+                    @roomModel.Cost р
+                </div>
         </div>
     </div>
 <div >
@@ -111,24 +207,67 @@
         </div>
         <div style="width: 60%; margin-left: 15%; font-size: 17px; padding: 1rem 1rem 2rem 1rem">
             <div style="margin-left:18px">
-            @currentRoom.Description
-@*                Современный звукоизолированный номер с 1 большой либо 2 раздельными кроватями – идеальный выбор для бизнес-путешественника. Площадь номера от 24 до 32 кв.м.<br><br>
-                Безупречная планировка номера и современные технологии создают комфортные условия для отдыха и работы.*@
+            @roomModel.Description
             </div>
         </div>
 </section>
 
 @code {
-    Room? currentRoom;
+    List<Room> rooms = new List<Room>();
+    Room roomModel = new Room();
+    bool wasSubmitted;
+    List<string> imgSrc = new List<string>();
+    IFileListEntry file = null;
+    List<byte[]> fileBytes = new List<byte[]>();
+    string inputFileError = "";
 
     protected override void OnInitialized()
     {
-        currentRoom = servise.room;
+        roomModel = Mongo.GetRoom((int)servise.room.Number);
+        FileSystemService.GetRoomWithPhotos(roomModel);
     }
 
-    private void Editing()
+    public void Submit()
     {
-        manager.NavigateTo("editing");
+        wasSubmitted = true;
+        Edit();
+        js.InvokeVoidAsync("CloseModal");
+    }
+
+    private void Edit()
+    {
+        Mongo.ReplaceRoom((int)servise.room.Number, roomModel);
+        FileSystemService.GetRoomWithPhotos(roomModel);
+    }
+
+    private async Task LoadFiles(IFileListEntry[] files)
+    {
+        imgSrc.Clear();
+        fileBytes.Clear();
+        if (files.Count() == 3)
+        {
+            inputFileError = "";
+            for (int i = 0; i < files.Count(); i++)
+            {
+                file = files[i];
+                using (var stream = new MemoryStream())
+                {
+                    await file.Data.CopyToAsync(stream);
+                    fileBytes.Add(stream.ToArray());
+                    var images = FileSystemService.GetImage(Convert.ToBase64String(fileBytes[i]));
+                    imgSrc.Add(string.Format("data:image/jpg;base64,{0}", Convert.ToBase64String(images)));
+                }
+            }
+        }
+        else if (files.Count() > 3) inputFileError = "Можно загрузить только 3 фото";
+        //else inputFileError = "Нужно загрузить 3 фото";
+    }
+
+    private void Clear()
+    {
+        roomModel = Mongo.GetRoom((int)servise.room.Number);
+        FileSystemService.GetRoomWithPhotos(roomModel);
+        imgSrc.Clear();
     }
 }
 
@@ -165,14 +304,12 @@
         line-height: 1.2;
     }
 
-    iconify-icon {
+    .ServicesBlock iconify-icon {
         position: absolute;
         margin-left: -32px;
         font-size: 23px;
     }
-/*    #carouselExampleIndicators {
-        margin: auto;
-    }*/
+
     #image, #carouselExampleIndicators {
         position: center;
         border: 1px solid black;
@@ -215,5 +352,162 @@
     .grid-gallery .grid-item:nth-child(1) {
         grid-column: span 2;
         grid-row: span 2;
+    }
+
+    .button {
+        position: relative;
+        border: 1px solid rgba(255, 255, 255, 0.5);
+        font-size: 16px;
+        width: 50px;
+        height: 50px;
+        color: #212529;
+        background: transparent;
+        text-shadow: 0 1px 1px rgb(0 0 0 / 20%);
+        border-radius: 10px;
+    }
+
+        .button span,
+        .button iconify-icon {
+            z-index: 1;
+        }
+
+        .button:active {
+            border-color: rgba(0, 0, 0, 0.1);
+        }
+
+        .button::before,
+        .button::after {
+            content: "";
+            position: absolute;
+            transition: all 0.3s;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            border-radius: 10px;
+        }
+
+        .button::before {
+            background: #badbd559;
+        }
+
+    #buttonAdd iconify-icon {
+        color: #e8d427;
+        font-size: 27px;
+        margin-top:2px;
+    }
+
+    #buttonAdd::before,
+    #buttonAdd:active::before {
+        opacity: 0;
+        transform: scale(1, 0.1);
+    }
+
+    #buttonAdd:hover::before {
+        opacity: 1;
+        transform: scale(1, 1);
+    }
+
+    .typeList, .description {
+        position: relative;
+        margin-top: -33px;
+    }
+
+    .description textarea {
+        background: transparent;
+        border-color: #ced4da;
+        width: 400px;
+        margin-left: 2.6rem;
+        padding: 10px;
+        height: 100px;
+        min-height: 100px;
+        max-height: 100px;
+        outline: none;
+    }
+
+    .typeList select {
+        background: transparent;
+        outline: none;
+        font-size: 16px;
+        border: 0;
+        border-radius: 0px;
+        border-bottom: 1px solid #ced4da;
+        height: 35px;
+        width: 400px;
+        margin-left: 2.6rem;
+    }
+
+    #inputBox {
+        position: relative;
+        margin-top: -40px;
+    }
+
+    #span {
+        margin-top: -30px;
+    }
+
+    #inputimage {
+        position: relative;
+        margin-top: -55px;
+        outline: none;
+        margin-left: 2.6rem;
+        height: 37px;
+        width: 400px;
+    }
+
+    #inputBox input {
+        background-color: transparent;
+        border: 0;
+        border-bottom: 1px solid #ced4da;
+        border-radius: 0;
+        outline: none;
+        color: black;
+        font-size: 14px;
+        margin-left: 2.6rem;
+        height: 37px;
+        width: 400px;
+    }
+
+    #inputBox span, .typeList span, .description span {
+        position: absolute;
+        left: 45px;
+        padding: 4px;
+        pointer-events: none;
+        font-size: 0.8em;
+        color: gray;
+        text-transform: uppercase;
+        transition: 0.5s;
+    }
+
+    .description textarea:active,
+    .typeList select:active {
+        border-color: #ced4da;
+        outline: none;
+    }
+
+    .description textarea:valid ~ #span,
+    .description textarea:focus ~ #span,
+    .typeList select:valid ~ #span,
+    .typeList select:focus ~ #span,
+    #inputBox input:valid ~ #span,
+    #inputBox input:focus ~ #span {
+        color: grey;
+        transform: translateX(-1px) translateY(-15px);
+        font-size: 0.6em;
+        background: none;
+        letter-spacing: 0.2em;
+    }
+
+    .md-form .prefix ~ input, select, textarea {
+        width: calc(100% - 2rem);
+        margin-left: 2.5rem;
+    }
+
+    .md-form iconify-icon {
+        position: relative;
+        transition: color .2s;
+        font-size: 2.1rem;
+        top: 5px;
     }
 </style>
